adding add to cart feature to Books page

--- a/src/pages/cartStyles.css
+++ b/src/pages/cartStyles.css
@@ -73,6 +73,8 @@
 #itemTotal {
   margin-right: 15px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: aqua;
+  flex: 1;
 }
 #cart .cart-left .product-list .book-item img {
   width: 80px;
