--- a/src/components/bookCard.css
+++ b/src/components/bookCard.css
@@ -15,6 +15,9 @@
   /* justify-content: center; */
   align-items: center;
   overflow-y: hidden;
+  position: relative;
+
+  transition: background-color 0.3s ease;
 }
 
 .book-card img {
@@ -40,4 +43,30 @@
   transform: scale(1.02);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+}
+
+.add-to-cart-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.book-card:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.book-card:hover .add-to-cart-button {
+  background-color: #ffffff;
+  border-radius: 8px;
+}
+.book-card:hover .add-to-cart-button img {
+  width: 40px;
+  height: 40px;
 }
