--- a/src/components/navbarStyles.css
+++ b/src/components/navbarStyles.css
@@ -72,3 +72,7 @@
   -moz-box-shadow: 0px 1.5px 0px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 1.5px 0px 0px rgba(0, 0, 0, 0.75);
 }
+
+.disabled {
+  pointer-events: none;
+}
