--- a/src/pages/authorsStyle.css
+++ b/src/pages/authorsStyle.css
@@ -110,20 +110,16 @@ button.disabled-button {
 }
 /* ************************************************ */
 
-/* Add this CSS to your stylesheet */
-
-/* Styles for the entire carousel container */
 .carousel {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  max-width: 800px; /* Adjust the maximum width as needed */
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
 }
 
-/* Styles for the carousel buttons */
 .carousel-button {
   background-color: #0074d9;
   color: #fff;
@@ -139,14 +135,12 @@ button.disabled-button {
   background-color: #0056b3;
 }
 
-/* Styles for the carousel content */
 .carousel-content {
   display: flex;
   overflow: hidden;
   position: relative;
 }
 
-/* Styles for individual carousel items */
 .view {
   width: 100%;
   flex-shrink: 0;
@@ -156,26 +150,23 @@ button.disabled-button {
 }
 
 .view.active {
-  transform: scale(1.1); /* Increase size of the active book */
+  transform: scale(1.1);
   z-index: 2;
   background-color: #fff;
   border: 2px solid #0074d9;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* Styles for book image */
 .view img {
   max-width: 100%;
   height: auto;
 }
 
-/* Styles for book title */
 .view p {
   margin: 10px 0;
   font-size: 16px;
 }
 
-/* Styles for Add to Cart button */
 .view button {
   background-color: #0074d9;
   color: #fff;
