--- a/src/pages/cartStyles.css
+++ b/src/pages/cartStyles.css
@@ -25,8 +25,7 @@
 #cart .cart-left .product-list {
   overflow-y: scroll;
 }
-#itemImage {
-}
+
 #itemName {
   height: 100%;
   font-size: 12px;
@@ -128,6 +127,13 @@
   font-weight: 200;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
+  color: #7b7b7b;
+}
+.shipping2 {
+  font-weight: 200;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  padding-left: 10px;
   color: #7b7b7b;
 }
 .checkout {
